move images to folder

--- a/tab.html
+++ b/tab.html
@@ -23,7 +23,7 @@
         <tr>
           <td><input type="checkbox" /></td>
           <td>
-            <img class="img_ro" src="1 for tab.png" alt="figma" />
+            <img class="img_ro" src="img/1Tab.png" alt="figma" />
           </td>
           <td class="data">
             <div>Figma</div>
@@ -49,7 +49,7 @@
 
         <tr>
           <td><input type="checkbox" /></td>
-          <td><img src="2forTab.png" alt="Adobe XD" /></td>
+          <td><img src="img/2Tab.png" alt="Adobe XD" /></td>
           <td class="data">
             <div>Abode XD</div>
             <div>"https:www.adob.com"</div>
@@ -74,7 +74,7 @@
 
         <tr>
           <td><input type="checkbox" /></td>
-          <td><img src="3fortab.png" alt="Mailchimp" /></td>
+          <td><img src="img/3Tab.png" alt="Mailchimp" /></td>
           <td class="data">
             <div>Mailchimp</div>
             <div>Https://malichimp.com</div>
@@ -99,7 +99,7 @@
 
         <tr>
           <td><input type="checkbox" /></td>
-          <td><img src="4fortab.png" alt="WIX" /></td>
+          <td><img src="img/4Tab.png" alt="WIX" /></td>
           <td class="data">
             <div>WIX</div>
             <div>https://www.vix.com</div>
@@ -124,7 +124,7 @@
 
         <tr>
           <td><input type="checkbox" /></td>
-          <td><img src="5 for tab.png" alt="Youtube" /></td>
+          <td><img src="img/5Tab.png" alt="Youtube" /></td>
           <td class="data">
             <div>Youtube</div>
             <div>https://www.Youtube.com</div>
